# super-deep-research

./: .gitignore  LICENSE  README.md  SETUP.md  start.sh
backend/: config.py  database.py  env.example  main.py  models.py  pyproject.toml  requirements.txt  research_service.py
backend/app/: database.py  main.py  models.py  schemas.py  services.py
backend/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py  xai_provider.py
backend/services/: anthropic_provider.py  base_provider.py  llm_providers.py  models.py  openai_provider.py  pdf_export.py  report_merger.py  research_orchestrator.py  xai_provider.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  api.ts  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: JobStatus.tsx  MasterReport.tsx  MasterReportGenerator.tsx  ProgressTracker.tsx  ReportComparison.tsx  ReportDisplay.tsx  ReportViewer.tsx  ResearchForm.tsx  ResearchProgress.tsx
frontend/src/services/: api.ts  websocket.ts
frontend/src/types/: index.ts
